# OPENCV-NDK-OCR

./: README.md
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/java/ac/ict/humanmotion/ocr/: AutoFitTextureView.kt  Camera2VideoFragment.kt  ConfirmationDialog.kt  Constants.kt  ErrorDialog.kt  MainActivity.kt  TrackerActivity.kt
app/src/main/java/ac/ict/humanmotion/ocr/CVCamera/: CameraActivity.kt
app/src/main/res/layout/: activity_camera.xml  activity_main.xml  activity_tracker.xml  fragment_camera2_video.xml
app/src/main/res/values/: dimens.xml  strings.xml  styles.xml
